--- a/论文汇总.md
+++ b/论文汇总.md
@@ -5,7 +5,7 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| 《《FLAT: Chinese NER Using Flat-Lattice Transformer》》 |命名实体识别 |
+| 《FLAT: Chinese NER Using Flat-Lattice Transformer》 |命名实体识别 |
 | 《Unified Structure Generation for Universal Information Extraction》 |通用/统一信息抽取 |
 | 《TabTransformer: Tabular Data Modeling Using Contextual Embeddings》 |表格特征融合 |
 | 《See Better Before Looking Closer: Weakly Supervised Data Augmentation Network for Fine-Grained Visual Classification》 |数据增强 |
