--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,9 +2,9 @@
 | ----  |----  | 
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《Co-Writing Screenplays and Theatre Scripts with Language Models An Evaluation by Industry Professionals》 |小说&剧本 |
+| 《Re3: Generating Longer Stories With Recursive Reprompting and Revision》 |小说&剧本 |
+| 《Kuaipedia: a Large-scale Multi-modal Short-video Encyclopedia》 |标签体系&标签扩展&兴趣标签&概念标签 |
 | 《FLAT: Chinese NER Using Flat-Lattice Transformer》 |命名实体识别 |
 | 《Unified Structure Generation for Universal Information Extraction》 |通用/统一信息抽取 |
 | 《TabTransformer: Tabular Data Modeling Using Contextual Embeddings》 |表格特征融合 |
