--- a/小说&剧本.md
+++ b/小说&剧本.md
@@ -1,7 +1,7 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《Re3: Generating Longer Stories With Recursive Reprompting and Revision》| EMNLP2022| Meta的Re3：<br/>基于OpenAI的InstructGPT写小说；<br/>卖点：小说长度+流畅度和相关性高；<br/>启发：大公司提供大模型+小公司设计prompt| NULL | NULL |
-| 《Co-Writing Screenplays and Theatre Scripts with Language Models An Evaluation by Industry Professionals》 | arxiv 2022 | Deepmind 的Dramatron：<br/>可以交互式的写剧本；<br/>经过“专家”评审，效果很不错；<br/>没有开源，但prompt具体实现基本放到附录E中了；<br/>使用了自己的语言模型Chinchilla，但也提到可以使用GPT-3模型 | NULL | NULL |
+| 《Co-Writing Screenplays and Theatre Scripts with Language Models An Evaluation by Industry Professionals》 | arxiv 2022 | Deepmind 的Dramatron：<br/>可以交互式的写剧本；<br/>经过“专家”评审，效果很不错；<br/>没有开源，但prompt具体实现基本放到附录E中了；<br/>使用了自己的语言模型Chinchilla，但也提到可以使用GPT-3模型；<br/>基于fewshot的prompt实现； | NULL | NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
