--- a/论文汇总.md
+++ b/论文汇总.md
@@ -5,9 +5,9 @@
 | NULL |NULL |
 | NULL |NULL |
 | 《DOC: Improving Long Story Coherence With Detailed Outline Control》 |小说&剧本 |
-| 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》 |文本预训练模型 |
-| 《Scaling Instruction-Finetuned Language Models》 |文本预训练模型 |
-| 《Training language models to follow instructions with human feedback》 |文本预训练模型 |
+| 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》 |通用基础大语言模型 |
+| 《Scaling Instruction-Finetuned Language Models》 |通用基础大语言模型 |
+| 《Training language models to follow instructions with human feedback》 |通用基础大语言模型 |
 | 《Co-Writing Screenplays and Theatre Scripts with Language Models An Evaluation by Industry Professionals》 |小说&剧本 |
 | 《Re3: Generating Longer Stories With Recursive Reprompting and Revision》 |小说&剧本 |
 | 《Kuaipedia: a Large-scale Multi-modal Short-video Encyclopedia》 |标签体系&标签扩展&兴趣标签&概念标签 |
