--- a/论文汇总.md
+++ b/论文汇总.md
@@ -4,6 +4,9 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| 《Improving alignment of dialogue agents via targeted human judgements》 |通用基础大语言模型 |
+| 《LaMDA: Language Models for Dialog Applications》 |通用基础大语言模型 |
+| 《Constitutional AI: Harmlessness from AI Feedback》 |通用基础大语言模型 |
 | 《DOC: Improving Long Story Coherence With Detailed Outline Control》 |小说&剧本 |
 | 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》 |通用基础大语言模型 |
 | 《Scaling Instruction-Finetuned Language Models》 |通用基础大语言模型 |
