--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,7 +3,7 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
+| 《PEER: A Collaborative Language Model》 |通用基础大语言模型 |
 | 《Improving alignment of dialogue agents via targeted human judgements》 |通用基础大语言模型 |
 | 《LaMDA: Language Models for Dialog Applications》 |通用基础大语言模型 |
 | 《Constitutional AI: Harmlessness from AI Feedback》 |通用基础大语言模型 |
