--- a/文本相似度计算.md
+++ b/文本相似度计算.md
@@ -2,6 +2,7 @@
 |  ----  | ----  |----  | ----  |----  |
 | 《深度文本匹配综述》  | 2017 |NULL |NULL |NULL |
 | 《A Deep Look into Neural Ranking Models for Information Retrieval》| arXiv2019|文本相似度/检索综述：<br/>1. Introduction；<br/>2. Major Applications of Neural Ranking Models；<br/>3. A Unified Model Formulation；<br/>4. Model Architecture；<br/>5. Model Learning；<br/>6. Model Comparison；<br/>7. Trending Topics；<br/>8. Conclusion;|done|NULL |
+| 《Poly-encoders: architectures and pre-training strategies for fast and accurate multi-sentence scoring》| ICLR2020| Meta出品，在多句检索场景的文本向量化：<br/>1 效果比bi-encoder好，速度cross-encoder快，效果和速度不能兼得；<br/>2 实验中预训练模型都做了领域适应；<br/>3 核心创新点是做了input和candidate的attention（感觉input在transformer后的向量attention意义不大）；<br/>4 感觉试用于精排；| NULL | NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
