--- a/闲聊对话.md
+++ b/闲聊对话.md
@@ -7,6 +7,7 @@
 | 《A Neural Conversational Model》  | ICML2015 |NULL |NULL |NULL |
 | 《The Design and Implementation of XiaoIce, an Empathetic Social Chatbot》  | Arxiv2019 |NULL |NULL |NULL |
 | 《Challenges in Building Intelligent Open-domain Dialog Systems》  | 2019 |NULL |NULL |NULL |
+| 《Recipes for building an open-domain chatbot》| arxiv2020| Meta的BlenderBot1：<br/>1 检索+生成；<br/>2 模型大小9.4B；<br/>3 数据相对更干净；<br/>4 整体上paper和名字对应的比较好，是一个对话系统设计的Recipes；<br/>5 对比google的开放域聊天机器人meena（ParlAI是Meta在对话上的工具框架，BlenderBot是机器人实体）| NULL | BlenderBot系列介绍：https://zhuanlan.zhihu.com/p/555538140|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
