--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,6 +3,14 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |通用基础大语言模型 |
+| 《Recipes for building an open-domain chatbot》 |闲聊对话&开放域问答 |
+| 《Poly-encoders: architectures and pre-training strategies for fast and accurate multi-sentence scoring》 |文本相似度计算 |
 | 《PEER: A Collaborative Language Model》 |通用基础大语言模型 |
 | 《Improving alignment of dialogue agents via targeted human judgements》 |通用基础大语言模型 |
 | 《LaMDA: Language Models for Dialog Applications》 |通用基础大语言模型 |
