--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -8,6 +8,8 @@
 | 《LaMDA: Language Models for Dialog Applications》| arxiv2022| 谷歌大脑的LaMDA语言模型：<br/>1 训练范式相对简单，pretrain+finetune（对比InstructGPT的SFT+RM+RLHF）；<br/>2 引入了检索结果；<br/>3 对回复的评价测量，Quality，Safty，Groundedness（对应InstructGPT的helpful，harmfulless，honest）；| NULL | NULL |
 | 《Improving alignment of dialogue agents via targeted human judgements》| arxiv2022| DeepMind的Sparrow语言模型：<br/>1 融合了Lambda模型的外部知识，和InstructGPT的RLHF；<br/>2 基础模型基于Chinchilla；| NULL | NULL |
 | 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》| arxiv2022|APE方法：使用大模型来生成prompt<br/>1 在实践中可能速度比较慢，成本比较高（要多次调用大模型才能实现）|NULL |NULL |
+| 《LLaMA: Open and Efficient Foundation Language Models》| facebook research 2023| Meta的LLaMA模型：<br/>1 Meta的高效率大模型（参数更小）；<br/>2 LLaMA-13B对标GPT-3(175B)；<br/>3 LLaMA-65B对标Chinchilla70B and PaLM-540B；<br/>4 核心是数据量的和计算量的提升（原理和Deepmind的Chinchilla基本一致）；| NULL | https://mp.weixin.qq.com/s/MbZTfVgxx221Eo9pl1h80w |
+| 《Learning by Distilling Context》| arxiv2022 | 上下文蒸馏：<br/>1 给大模型更多的输入提示，同时，要求大模型的输出理由和结果；<br/>2 给小模型输入较少的提示，直接输出最终结果；<br/>3 感觉核心就是通过提示让大模型输出的结果更置信，效果肯定没有纯人工构造的数据好（但机器的效率高）；| NULL | NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
