--- a/论文汇总.md
+++ b/论文汇总.md
@@ -4,10 +4,10 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
+| 《ChatGPT for Robotics:Design Principles and Model Abilities》 |其他 |
+| 《Learning by Distilling Context》 |通用基础大语言模型 |
+| 《LLaMA: Open and Efficient Foundation Language Models》 |通用基础大语言模型 |
 | 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |通用基础大语言模型 |
 | 《Recipes for building an open-domain chatbot》 |闲聊对话&开放域问答 |
 | 《Poly-encoders: architectures and pre-training strategies for fast and accurate multi-sentence scoring》 |文本相似度计算 |
