--- a/论文汇总.md
+++ b/论文汇总.md
@@ -24,7 +24,7 @@
 | 2023-《Kuaipedia: a Large-scale Multi-modal Short-video Encyclopedia》 |标签体系&标签扩展&兴趣标签&概念标签 |
 | 《FLAT: Chinese NER Using Flat-Lattice Transformer》 |命名实体识别 |
 | 《Unified Structure Generation for Universal Information Extraction》 |通用/统一信息抽取 |
-| 《TabTransformer: Tabular Data Modeling Using Contextual Embeddings》 |表格特征融合 |
+| 2022-《TabTransformer: Tabular Data Modeling Using Contextual Embeddings》 |表格特征融合 |
 | 《See Better Before Looking Closer: Weakly Supervised Data Augmentation Network for Fine-Grained Visual Classification》 |数据增强 |
 |《Grad-CAM:Visual Explanations from Deep Networks via Gradient-based Localization》|模型可解释性|
 | 《PointNet: Deep Learning on Point Sets for 3D Classification and Segmentation》 |3D视觉 |
