--- a/摘要生成.md
+++ b/摘要生成.md
@@ -6,6 +6,7 @@
 | 《Abstractive Summarization: A Survey of the State of the Art》  | AAAI2019 |NULL |NULL |NULL |
 | 《Aspect-Aware Multimodal Summarization for Chinese E-Commerce Products》  | AAAI 2020 |京东多模态摘要生成（集大成者）：<br/>1 整体P(gen)+P(copy)的框架参考《Get To The Point: Summarization with Pointer-Generator Networks》<br/>2 指针网络同时融合了标题、图片、正文信息<br/>3 针对任务进行训练优化，参考《Reward Augmented Maximum Likelihood for Neural Structured Prediction》<br/>4 消除生成冗余参考《Get To The Point: Summarization with Pointer-Generator Networks》，同时，也用了自己的策略；<br/>5 保证生成的内容不会出对应错误，参考《Faithful to the Original: Fact Aware Neural Abstractive Summarization》《Ensure the Correctness of the Summary: Incorporate Entailment Knowledge into Abstractive Sentence Summarization》<br/>6 领域关键特性词挖掘，参考《Latent Aspect Rating Analysis on Review Text Data: A Rating Regression Approach》 |done |NULL |
 | 《Recursively Summarizing Books with Human Feedback》 | arxiv2021 | 基于GPT3进行小说级别的摘要生成：<br/>1 将小说按树状结构分层进行摘要；<br/>2 对比了BC（behavior cloning）模式，和RL（reinforcement learning）的训练模式；<br/>3 对比模型大小对结果的影响； | NULL | https://mp.weixin.qq.com/s/vLR9CwP8xq5ZOw1BfiM_3A |
+| 《Learning to summarize from human feedback》| arxiv2020 | OpenAI基于人类反馈（RLHF）进行摘要生成：<br/>1 参考了OpenAI2019年的类似工作《Fine-Tuning Language Models from Human Preferences》；<br/>2 Pangu-RLHF参考这这篇文章，因为这篇文章开源了RLHF的代码（https://openi.pcl.ac.cn/PCL-Platform.Intelligence/Pangu-RLHF）；| NULL | NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
