--- a/论文汇总.md
+++ b/论文汇总.md
@@ -4,6 +4,10 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |ALM/PromptLearning/PromptEngineering |
+| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |ALM/PromptLearning/PromptEngineering |
+| 《Learning to summarize from human feedback》 |摘要生成 |
 | 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
 | 《ChatGPT for Robotics:Design Principles and Model Abilities》 |其他 |
 | 《Learning by Distilling Context》 |通用基础大语言模型 |
