--- a/论文汇总.md
+++ b/论文汇总.md
@@ -5,8 +5,8 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |ALM/PromptLearning/PromptEngineering |
-| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |ALM/PromptLearning/PromptEngineering |
+| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |大模型增强 |
+| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |大模型增强 |
 | 《Learning to summarize from human feedback》 |摘要生成 |
 | 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
 | 《ChatGPT for Robotics:Design Principles and Model Abilities》 |其他 |
