--- a/论文汇总.md
+++ b/论文汇总.md
@@ -3,8 +3,8 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback》 |通用基础大语言模型 |
+| 《Augmented Language Models: a Survey》 |大模型增强 |
 | 《OpenPrompt: An Open-source Framework for Prompt-learning》 |大模型增强 |
 | 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |大模型增强 |
 | 《Learning to summarize from human feedback》 |摘要生成 |
