--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -1,7 +1,13 @@
 |名称  |  来源   | 说明  |状态   | 备注  |
 |  ----  | ----  |----  | ----  |----  |
 | 《PEER: A Collaborative Language Model》| arxiv2022| Meta的PEEK：<br/>1 交互式文本编辑语言模型；<br/>2 训练数据来源维基百科的更新历史和自己的数据增强；<br/>3 整体上和InstructGPT（text-davinc-001）相比，在个别场景优势不明显；| NULL | NULL |
+| OpenAI  | OpenAI |OpenAI |OpenAI |OpenAI |
+| 《Improving Language Understanding by Generative Pre-Training》  | 2018，没发表？ |OpenAI GPT：<br/> 先于BERT提出Pre-train+Fine-tuning范式; |done |NULL |
+| 《Language Models are Unsupervised Multitask Learners》  | 2019，没发表？ |GPT-2：<br/>数据集WebText；<br/>Train一个参数超大的语言模型，实现Zero-shot效果；<br/>没有Fine-tuning过程； |done |NULL |
+| 《Language Models are Few-Shot Learners》  | NULL |GPT-3：<br/>实现few-shot和one-shot，不需要梯度更新；<br/>可以Fine-tuning，但paper中，没用Fine-tuning；<br/>one-shot和few-shot体现在输入中，而不会用来微调，可以参考paper中的Figure 2.1； |done |NULL |
 | 《Training language models to follow instructions with human feedback》 | arxiv 2022 | OpenAI的InstructGPT：<br/>训练了三个模型（1.3B、6B、175B），其中1.3B的效果就比175B的GPT-3效果好；<br/>主要的核心SFT+MR+PPO；<br/>训练的数据集也比较小：SFT-13k，RM-33k，PPO-31k | NULL | NULL |
+| Google  | Google |Google |Google |Google |
+| 《Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer》  | NULL |Google T5：<br>模型结构：Encoder-Decoder、Language model和Prefix LM;<br>注意力掩码机制：Casual、Casual prefix和Fully-visible;<br>预训练方法：语言模型式、Bert Mask式和Deshuffling;<br>Mask策略：Mask模式、Replace span模式和drop模式;<br>Mask比例：10%、15%、25%和50%四种;<br>Span长度：2、3、5和10四种;<br>训练策略：fine-tune、多任务学习、多任务fine-tune和Scaling; |done |博客参考：<br/> https://zhuanlan.zhihu.com/p/88727133 <br/> https://zhuanlan.zhihu.com/p/138235834|
 | 《Scaling Instruction-Finetuned Language Models》| arXiv2022| Google的FLAN：<br/> Instruct tuning；<br/>基于PaLM和T5进行的实验；| NULL | NULL |
 | 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》| arXiv2020| 英伟达的Megatron LM：<br/>核心是张量并行（数据并行、张量并行、Pipeline并行）；<br/>在BERT和GPT-2上做了验证；<br/>只需做部分代码插入，不需要专门的框架或者编译器；<br/>李沐的paper分享也有介绍；| NULL |参考：https://zhuanlan.zhihu.com/p/366906920|
 | 《LaMDA: Language Models for Dialog Applications》| arxiv2022| 谷歌大脑的LaMDA语言模型：<br/>1 训练范式相对简单，pretrain+finetune（对比InstructGPT的SFT+RM+RLHF）；<br/>2 引入了检索结果；<br/>3 对回复的评价测量，Quality，Safty，Groundedness（对应InstructGPT的helpful，harmfulless，honest）；| NULL | NULL |
