--- a/论文汇总.md
+++ b/论文汇总.md
@@ -10,9 +10,9 @@
 | 《Learning to summarize from human feedback》 |摘要生成 |
 | 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
 | 《ChatGPT for Robotics:Design Principles and Model Abilities》 |其他 |
-| 《Learning by Distilling Context》 |通用基础大语言模型 |
+| 《Learning by Distilling Context》 |大模型增强 |
 | 《LLaMA: Open and Efficient Foundation Language Models》 |通用基础大语言模型 |
-| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |通用基础大语言模型 |
+| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |大模型增强 |
 | 《Recipes for building an open-domain chatbot》 |闲聊对话&开放域问答 |
 | 《Poly-encoders: architectures and pre-training strategies for fast and accurate multi-sentence scoring》 |文本相似度计算 |
 | 《PEER: A Collaborative Language Model》 |通用基础大语言模型 |
