--- a/论文汇总.md
+++ b/论文汇总.md
@@ -20,7 +20,7 @@
 | 《LaMDA: Language Models for Dialog Applications》 |通用基础大语言模型 |
 | 《Constitutional AI: Harmlessness from AI Feedback》 |通用基础大语言模型 |
 | 《DOC: Improving Long Story Coherence With Detailed Outline Control》 |小说&剧本 |
-| 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》 |通用基础大语言模型 |
+| 《Megatron-LM: Training Multi-Billion Parameter Language Models Using Model Parallelism》 |训练加速 |
 | 《Scaling Instruction-Finetuned Language Models》 |通用基础大语言模型 |
 | 2023-《Training language models to follow instructions with human feedback》 |2023-通用基础大语言模型 |
 | 《Co-Writing Screenplays and Theatre Scripts with Language Models An Evaluation by Industry Professionals》 |小说&剧本 |
