--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,7 +2,7 @@
 | ----  |----  | 
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
+| 《Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback》 |大模型增强 |
 | 《Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback》 |通用基础大语言模型 |
 | 《Augmented Language Models: a Survey》 |大模型增强 |
 | 《OpenPrompt: An Open-source Framework for Prompt-learning》 |大模型增强 |
