--- a/文本预训练模型.md
+++ b/文本预训练模型.md
@@ -45,6 +45,9 @@
 | 《NEZHA: Neural Contextualized Representation for Chinese Language Understanding》  | 2019 |NEZHA |NULL |NULL |
 | 《ZEN: Pre-training Chinese (Z) Text Encoder Enhanced by N-gram Representations 》  | 2019 |ZEN |NULL |NULL |
 | 《Revisiting Pre-Trained Models for Chinese Natural Language Processing》  | 2020 |MacBERT |NULL |NULL |
+| 《BloombergGPT: A Large Language Model for Finance》| arXiv2023| 彭博社的GPT预训练大模型：<br/>1 数据上是领域的金融数据+通用数据；<br/>2 参数量50B；<br/>3 在模型实现上主要参考了BLOOM项目；<br/>4 在AWS的A100集群行训练；<br/>5 核心还是训练一个领域的预训练模型，和GPT-NeoX、OPT-66B、BLOOM-176B对比起来，效果优化不少，但直接的结果也并不惊艳（预训练模型都这样）；| NULL | NULL |
+| 《BLOOM: A 176B-Parameter Open-Access Multilingual Language Model》 | arxiv2022 | BigScience开源组织的BLOOM（数据、模型、参数、硬件算力、训练框架、评测）：<br/>1 560M、1.1B、3B、7.1B、176B的预训练模型；<br/>2 在A100-80GB GPU集群上，基于Megatron-DeepSpeed框架（数据并行、张量并行、Pipeline并行）进行训练；<br/>3 在结果对比中有GPT-3，但并不是主要的对比对象。反而OPT模型的对比较多 | NULL | NULL |
+| 《OPT: Open Pre-trained Transformer Language Models》 | arXiv2022 | Meta的OPT模型（数据、模型、参数、硬件算力、训练框架、评测）：<br/>1 模型参数量：125M to 175B；<br/>2 基于Megatron-LM代码；<br/>3 基于A100-80G的GPU计算集群，通过数据并行和基于Megatron-LM的模型并行进行训练加速； | NULL | NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
