--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,6 +2,14 @@
 | ----  |----  | 
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| 《REACT: SYNERGIZING REASONING AND ACTING IN LANGUAGE MODELS》 |大模型增强 |
+| 《HuggingGPT: Solving AI Tasks with ChatGPT and its Friends in Hugging Face》 |大模型增强 |
+| 《OPT: Open Pre-trained Transformer Language Models》 |文本预训练模型 |
+| 《BLOOM: A 176B-Parameter Open-Access Multilingual Language Model》 |文本预训练模型 |
+| 《BloombergGPT: A Large Language Model for Finance》 |文本预训练模型 |
 | 《Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback》 |大模型增强 |
 | 《Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback》 |通用基础大语言模型 |
 | 《Augmented Language Models: a Survey》 |大模型增强 |
