--- a/论文汇总.md
+++ b/论文汇总.md
@@ -5,22 +5,22 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
-| 《REACT: SYNERGIZING REASONING AND ACTING IN LANGUAGE MODELS》 |大模型增强 |
-| 《HuggingGPT: Solving AI Tasks with ChatGPT and its Friends in Hugging Face》 |大模型增强 |
+| 《REACT: SYNERGIZING REASONING AND ACTING IN LANGUAGE MODELS》 |大模型增强与应用 |
+| 《HuggingGPT: Solving AI Tasks with ChatGPT and its Friends in Hugging Face》 |大模型增强与应用 |
 | 《OPT: Open Pre-trained Transformer Language Models》 |文本预训练模型 |
 | 《BLOOM: A 176B-Parameter Open-Access Multilingual Language Model》 |文本预训练模型 |
 | 《BloombergGPT: A Large Language Model for Finance》 |文本预训练模型 |
-| 《Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback》 |大模型增强 |
+| 《Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback》 |大模型增强与应用 |
 | 《Training a Helpful and Harmless Assistant with Reinforcement Learning from Human Feedback》 |通用基础大语言模型 |
-| 《Augmented Language Models: a Survey》 |大模型增强 |
-| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |大模型增强 |
-| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |大模型增强 |
+| 《Augmented Language Models: a Survey》 |大模型增强与应用 |
+| 《OpenPrompt: An Open-source Framework for Prompt-learning》 |大模型增强与应用 |
+| 《Delta Tuning: A Comprehensive Study of Parameter Efficient Methods for Pre-trained Language Models》 |大模型增强与应用 |
 | 《Learning to summarize from human feedback》 |摘要生成 |
 | 《Recursively Summarizing Books with Human Feedback》 |摘要生成 |
 | 《ChatGPT for Robotics:Design Principles and Model Abilities》 |其他 |
 | 《Learning by Distilling Context》 |大模型增强 |
 | 《LLaMA: Open and Efficient Foundation Language Models》 |通用基础大语言模型 |
-| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |大模型增强 |
+| 《LARGE LANGUAGE MODELS ARE HUMAN-LEVEL PROMPT ENGINEERS》 |大模型增强与应用 |
 | 《Recipes for building an open-domain chatbot》 |闲聊对话&开放域问答 |
 | 《Poly-encoders: architectures and pre-training strategies for fast and accurate multi-sentence scoring》 |文本相似度计算 |
 | 《PEER: A Collaborative Language Model》 |通用基础大语言模型 |
