--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -19,6 +19,7 @@
 | 《Constitutional AI: Harmlessness from AI Feedback》| arxiv2022| Anthropic公司的模型（创始团队来自OpenAI，新产品Claude）：<br/>1 整体设计思路和InstructGPT差不多（SFT、RM、RLHF）；<br/>2 SFT阶段引入了Constitutional AI机制，核心是对harmless的内容的处理（harmless、honest、helpful），基于Critique/Revision；<br/>3 使用PM替换了RM（PM使用的数据部分是Constitutional AI自动生成的）； | NULL | 参考：https://mp.weixin.qq.com/s/si2M52H1qKnyHd0IHVJR8g|
 | 《WebGPT: Browser-assisted question-answering with human feedback》| arxiv2022| OpenAI的WebGPT：<br/>1 基于GPT-3，借助搜索工具，提升模型的问答能力；<br/>2 核心方法：Behavior cloning（BC）、Reward modeling（RM）、Reinforcement learning（RL）、Reject sampling（best-of-n）；<br/>3 生成结果的引用是直接生成的，没有特别的处理(比如xxxx[1]，其中xxx来自文章1)| NULL | NULL |
 | 《Tool Learning with Foundation Models》| arxiv2023| 大模型使用工具的综述文章：<br/>1 提出Tool Learning；<br/>2 主要聚焦在Tool-augmented Learning和Tool-oriented Learning两个方面；<br/>3 对比了text-davinci-003和ChatGPT工具使用的情况；| NULL | NULL |
+| 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 | arxiv2023 | 非盈利组织LAION公司的开源大模型：<br/>1 LAION公司为Stable Diffusion公司提供了数据；<br/>2 文章的重点在对数据的介绍，模型相关的细节不多；<br/>3 SFT模型：Pythia-12B、LLaMA-13B、LLaMA-30B；<br/>4 PM模型：Pythia-1.4B、Pythia-12B；LLaMA-30B（计划）；<br/>5 PPO训练框架基于TRLX； | NULL | NULL|
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
