--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,9 +2,9 @@
 | ----  |----  | 
 | NULL |NULL |
 | NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
-| NULL |NULL |
+| 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 |通用基础大语言模型 |
+| 《Tool Learning with Foundation Models》 |大模型增强与应用 |
+| 《WebGPT: Browser-assisted question-answering with human feedback》 |大模型增强与应用 |
 | 《REACT: SYNERGIZING REASONING AND ACTING IN LANGUAGE MODELS》 |大模型增强与应用 |
 | 《HuggingGPT: Solving AI Tasks with ChatGPT and its Friends in Hugging Face》 |大模型增强与应用 |
 | 《OPT: Open Pre-trained Transformer Language Models》 |文本预训练模型 |
