--- a/论文汇总.md
+++ b/论文汇总.md
@@ -2,6 +2,12 @@
 | ----  |----  | 
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| NULL |NULL |
+| 《Toolformer: Language Models Can Teach Themselves to Use Tools》 |大模型增强与应用 |
+| 《A Cookbook of Self-Supervised Learning》 |图像预训练模型 |
+| 《RRHF: Rank Responses to Align Language Models with Human Feedback without tears》 |通用基础大语言模型 |
 | 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 |通用基础大语言模型 |
 | 《Tool Learning with Foundation Models》 |大模型增强与应用 |
 | 《WebGPT: Browser-assisted question-answering with human feedback》 |大模型增强与应用 |
