--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -19,6 +19,10 @@
 | 《Constitutional AI: Harmlessness from AI Feedback》| arxiv2022| Anthropic公司的模型（创始团队来自OpenAI，新产品Claude）：<br/>1 整体设计思路和InstructGPT差不多（SFT、RM、RLHF）；<br/>2 SFT阶段引入了Constitutional AI机制，核心是对harmless的内容的处理（harmless、honest、helpful），基于Critique/Revision；<br/>3 使用PM替换了RM（PM使用的数据部分是Constitutional AI自动生成的）； | NULL | 参考：https://mp.weixin.qq.com/s/si2M52H1qKnyHd0IHVJR8g|
 | 《OpenAssistant Conversations - Democratizing Large Language Model Alignment》 | arxiv2023 | 非盈利组织LAION公司的开源大模型：<br/>1 LAION公司为Stable Diffusion公司提供了数据；<br/>2 文章的重点在对数据的介绍，模型相关的细节不多；<br/>3 SFT模型：Pythia-12B、LLaMA-13B、LLaMA-30B；<br/>4 PM模型：Pythia-1.4B、Pythia-12B；LLaMA-30B（计划）；<br/>5 PPO训练框架基于TRLX； | NULL | NULL|
 | 《RRHF: Rank Responses to Align Language Models with Human Feedback without tears》| arXiv2023| 阿里达摩院的RRHF：<br/>1 不使用强化学习实现RLHF；<br/>2 传统的方法使用4个模型：LanguageModel、ValueModel、RewardModel、ReferenceModel，RRHF只使用2个：LanguageModel、RewardModel；<br/>3 核心思想是使用LanguageModel对其他模型（或者策略）生成的结果打分，和ReferenceModel的打分尽量一致；<br/>4 从实现效果看RRHF效果略好过PPO的方式；| NULL | NULL |
+| 《A Survey of Large Language Models》 | arXiv2023 | 大模型综述：作者主要来自人民大学高瓴人工智能学院（v9,20230428）<br/>1 INTRODUCTION<br/>2 OVERVIEW<br/>2.1 Background for LLMs<br/>2.2 Technical Evolution of GPT-series Models<br/>3 RESOURCES OF LLMS<br/>3.1 Publicly Available Model Checkpoints or APIs<br/>3.2 Commonly Used Corpora<br/>3.3 Library Resource<br/>4 PRE-TRAINING<br/>4.1 Data Collection<br/>4.2 Architecture<br/>4.3 Model Training<br/>5 ADAPTATION TUNING OF LLMS<br/>5.1 Instruction Tuning<br/>5.2 Alignment Tuning<br/>5.3 Efficient Tuning<br/>6 UTILIZATION<br/>6.1 In-Context Learning<br/>6.2 Chain-of-Thought Prompting<br/>7 CAPACITY EVALUATION<br/>7.1 Basic Evaluation Tasks<br/>7.2 Advanced Ability Evaluation<br/>7.3 Public Benchmarks and Empirical Analysis<br/>8 CONCLUSION AND FUTURE DIRECTIONS | NULL | LLM+人工校对中文版：https://github.com/RUCAIBox/LLMSurvey/blob/main/assets/LLM_Survey_Chinese_0418.pdf |
+| 《Deep Reinforcement Learning from Human Preferences》| arXiv2017| 基于人类反馈的强化学习：<br/>1 ChatGPT中使用的RLHF的起源方法；<br/>2 OpenAI和DeepMind的联合工作；<br/>3 在PPO方法出现之前（文中使用A2C和TRPO）；| NULL | NULL |
+| 《GPT-4 Technical Report》| arxiv2023| 《GPT-4 Technical Report》<br/>1 Introduction<br/>2 Scope and Limitations of this Technical Report<br/>3 Predictable Scaling<br/>4 Capabilities<br/>5 Limitations<br/>6 Risks & mitigations<br/>7 Conclusion<br/>Authorship, Credit Attribution, and Acknowledgements<br/><br/>《GPT-4 System Card》<br/>1 Introduction<br/>2 GPT-4 Observed Safety Challenges<br/>3 Deployment Preparation<br/>4 System Safety<br/>5 Conclusion and Next Steps<br/>6 Acknowledgements| NULL | NULL |
+| 《PaLM 2 Technical Report》| arxiv2023| Google大模型PaLM2技术报告：<br/>1 Introduction<br/>2 Scaling law experiments<br/>3 Training dataset<br/>4 Evaluation<br/>5 Responsible usage| NULL | NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
