--- a/论文汇总.md
+++ b/论文汇总.md
@@ -5,6 +5,11 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| NULL |NULL |
+| 《PaLM 2 Technical Report》 |通用基础大语言模型 |
+| 《GPT-4 Technical Report》 |通用基础大语言模型 |
+| 《Deep Reinforcement Learning from Human Preferences》 |通用基础大语言模型 |
+| 《A Survey of Large Language Models》 |通用基础大语言模型 |
 | 《Toolformer: Language Models Can Teach Themselves to Use Tools》 |大模型增强与应用 |
 | 《A Cookbook of Self-Supervised Learning》 |图像预训练模型 |
 | 《RRHF: Rank Responses to Align Language Models with Human Feedback without tears》 |通用基础大语言模型 |
