--- a/通用基础大语言模型.md
+++ b/通用基础大语言模型.md
@@ -23,6 +23,7 @@
 | 《Deep Reinforcement Learning from Human Preferences》| arXiv2017| 基于人类反馈的强化学习：<br/>1 ChatGPT中使用的RLHF的起源方法；<br/>2 OpenAI和DeepMind的联合工作；<br/>3 在PPO方法出现之前（文中使用A2C和TRPO）；| NULL | NULL |
 | 《GPT-4 Technical Report》| arxiv2023| 《GPT-4 Technical Report》<br/>1 Introduction<br/>2 Scope and Limitations of this Technical Report<br/>3 Predictable Scaling<br/>4 Capabilities<br/>5 Limitations<br/>6 Risks & mitigations<br/>7 Conclusion<br/>Authorship, Credit Attribution, and Acknowledgements<br/><br/>《GPT-4 System Card》<br/>1 Introduction<br/>2 GPT-4 Observed Safety Challenges<br/>3 Deployment Preparation<br/>4 System Safety<br/>5 Conclusion and Next Steps<br/>6 Acknowledgements| NULL | NULL |
 | 《PaLM 2 Technical Report》| arxiv2023| Google大模型PaLM2技术报告：<br/>1 Introduction<br/>2 Scaling law experiments<br/>3 Training dataset<br/>4 Evaluation<br/>5 Responsible usage| NULL | NULL |
+| 《AlpacaFarm: A Simulation Framework for Methods that Learn from Human Feedback》| arxiv2023| 斯坦福的AlpacaFarm：快速构建并评测RHLF类模型<br/>1 基于LLMs对pairwise的数据进行标注，用于后续RLHF模型训练；<br/>2 基于LLMs对训练好的模型进行评测；<br/>3 预置了一些Reference Methods；| NULL | https://zhuanlan.zhihu.com/p/632261193 |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
 | NULL  | NULL |NULL |NULL |NULL |
