--- a/论文汇总.md
+++ b/论文汇总.md
@@ -6,6 +6,9 @@
 | NULL |NULL |
 | NULL |NULL |
 | NULL |NULL |
+| 《LLMs for Knowledge Graph Construction and Reasoning: Recent Capabilities and Future Opportunities》 |大模型增强与应用 |
+| 《Unlimiformer: Long-Range Transformers with Unlimited Length Input》 |大模型增强与应用 |
+| 《AlpacaFarm: A Simulation Framework for Methods that Learn from Human Feedback》 |通用基础大语言模型 |
 | 《PaLM 2 Technical Report》 |通用基础大语言模型 |
 | 《GPT-4 Technical Report》 |通用基础大语言模型 |
 | 《Deep Reinforcement Learning from Human Preferences》 |通用基础大语言模型 |
